Fix wallet button taking too much space

--- a/frontend/src/components/wallet-connector/styles.css
+++ b/frontend/src/components/wallet-connector/styles.css
@@ -36,7 +36,8 @@
 }
 
 .wallet-connector__address-text {
-    min-width: 100px;
+    min-width: 90px;
+    max-width: 120px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
